# dnsRecon

./: .gitignore  CHANGELOG_v1.md  Dockerfile  Dockerfile.oss  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
dnx/: __init__.py  cli.py  scanner.py
dnx/core/: config.py  errors.py  evidence.py  resolver.py  scope.py  target.py
dnx/findings/: engine.py  rules.py  score.py  severity.py
dnx/modules/: basic_records.py  caa.py  ct_logs.py  dns_health.py  dnssec.py  external_tools.py  http_probe.py  mail_security.py  nameservers.py  permutations.py  resolver_compare.py  reverse_dns.py  service_records.py  subdomains.py  takeover.py  tls_inspect.py  whois_lookup.py  wildcard.py  zone_transfer.py
dnx/output/: assets.py  console.py  csv_report.py  html_report.py  json_report.py  markdown_report.py  text_report.py
dnx/utils/: banner.py  validators.py
examples/: AUTHORIZED_QUICKSTART.md
resolvers/: public.txt
tests/: test_csv_report.py  test_findings.py  test_markdown.py  test_subdomains.py  test_target.py  test_v102_unknown_evidence.py  test_v103_nameserver_uncertainty.py  test_v31_assets.py  test_v31_config.py  test_v3_mail_security.py  test_v3_permutations.py  test_v3_scope.py  test_v3_takeover.py
wordlists/: medium.txt  small.txt
